src/objects/Service_Usage__c.object
<CustomObject>
    <fields>
        <fullName>Assessed_for_benefits__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assessed for benefits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_Worker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The name of the worker (staff or volunteer) assigned to service delivery.  NOTE THAT THIS MAY NEED TO BE REPLACED WITH A LOOKUP TO A WORKER OBJECT (OR CONTACT OF TYPE &apos;WORKER&apos;).</description>
        <inlineHelpText>The name of the worker assigned to provide the service if not the Record Owner (i.e. Home Support Worker, Befriender). Do NOT just type in paid worker/volunteer name – A paid worker/volunteer already on the system must be found, selected and inserted.</inlineHelpText>
        <label>Assigned Worker</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Usage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Benefits_received__c</fullName>
        <label>Benefits received</label>
        <picklist>
            <picklistValues>
                <fullName>Attendance/Disability living allowance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue badge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carer allowance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Council tax discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing benefit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Income support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pension credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (please describe below)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>BirthDate__c</fullName>
        <formula>Primary_Service_User__r.Birthdate</formula>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_reference_number__c</fullName>
        <formula>Primary_Service_User__r.Client_reference_number__c</formula>
        <label>Person ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closure_Date__c</fullName>
        <inlineHelpText>Set only when case is closed. Must be set if a ‘Closure Reason’ is set</inlineHelpText>
        <label>Closure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closure_Reason__c</fullName>
        <inlineHelpText>Set only when case is closed. Must be set if ‘Closure Date’ is set</inlineHelpText>
        <label>Closure Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Case complete - outcomes met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Reasons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Person Declined Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Person no longer eligible for service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service no longer required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service user moved into full time care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service user moved out of area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service user or person cared for deceased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary Suspension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referred to another service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Assessment_Commenced__c</fullName>
        <inlineHelpText>The date on which the Full Assessment was started</inlineHelpText>
        <label>Date Assessment Commenced</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Referral_Acknowledged__c</fullName>
        <inlineHelpText>The date on which the service acknowledged receipt of the referral</inlineHelpText>
        <label>Date Referral Acknowledged</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Service_User_Contacted__c</fullName>
        <inlineHelpText>The date on which the Service User was first contacted</inlineHelpText>
        <label>Date Service User Contacted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_initial_memory_screening__c</fullName>
        <inlineHelpText>Enter date that an initial memory screening assessment was  undertaken.</inlineHelpText>
        <label>Date of Initial Memory Screening</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_last_Activity__c</fullName>
        <description>Calculated field - set to the date of the last completed activity related to the Service Usage or one of its outcomes.</description>
        <label>Date of Last Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funding_Arrangement__c</fullName>
        <description>Funding Arrangement as an optional picklist to Service Usage for Day Support, Home Support, Social Inclusion, Social Activity Group, Dementia Café, Peer Support and Singing for the Brain.</description>
        <label>Funding Arrangement</label>
        <picklist>
            <picklistValues>
                <fullName>Direct Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Funder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Block Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spot purchase</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GAD_7_assessment_undertaken__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Generalised Anxiety Disorder Assessment (GAD 7)</description>
        <inlineHelpText>Generalised Anxiety Disorder Assessment (GAD 7)</inlineHelpText>
        <label>GAD-7 Assessment Undertaken</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Cognitive_Enhancer_been_Prescribed__c</fullName>
        <description>Brought forward from Dementia Adviser CRS (moved from Person to Service Usage - Dementia Adviser Service only).</description>
        <label>Has Cognitive Enhancer been Prescribed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_Referrer_Heard_of_the_Service__c</fullName>
        <inlineHelpText>Records how the referrer found out about the service. Useful for reporting, particularly for self-referrals and referrals by family members</inlineHelpText>
        <label>How Referrer Heard of the Service</label>
        <picklist>
            <picklistValues>
                <fullName>Advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dementia Awareness Week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dementia Connect (Website)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leaflet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Recommendation from Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Recommendation from Acquaintance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral from Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tesco Roadshow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_yes_which_Enhancer__c</fullName>
        <description>Used with the Has Cognitive Enhancer been Prescribed field.</description>
        <label>If yes which Enhancer?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Known_Risks__c</fullName>
        <description>Used to record any risks of which we were notified by the Referrer.</description>
        <inlineHelpText>Used to note any known risks indicated by the referrer</inlineHelpText>
        <label>Known Risks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LocalityName__c</fullName>
        <formula>Service_Field__r.Locality__r.Name</formula>
        <label>LocalityName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_of_Paper_File__c</fullName>
        <inlineHelpText>Required if ‘ACTIVE’ or ‘PRE-CRS ONLY’ is selected as specifies where any paper file is held (i.e. name of office or specific service where it is filed)</inlineHelpText>
        <label>Location of Paper File</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Memory_Assessment__c</fullName>
        <defaultValue>&quot;Memory Assessment Details.  Only applicable for some contracts.&quot;</defaultValue>
        <label>Memory Assessment</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Review_Date__c</fullName>
        <description>Automatically set from related Activities with Subject &apos;Review&apos;.</description>
        <inlineHelpText>Specifies the (approximate) date of the next review</inlineHelpText>
        <label>Next Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_How_referrer_heard_of_the_service__c</fullName>
        <inlineHelpText>Used to describe how the referrer heard of the service if ‘OTHER’ is selected in previous ‘How Referrer Heard’ field</inlineHelpText>
        <label>Other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Type_of_Referrer__c</fullName>
        <inlineHelpText>Used to describe the Referral Source if ‘OTHER’ is selected in previous ‘Referral Source’ field</inlineHelpText>
        <label>Other Type of Referrer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_benefits__c</fullName>
        <label>Other Benefits</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PHQ_9_assessment_undertaken__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Patient Health Questionnaire (PHQ-9)</inlineHelpText>
        <label>PHQ-9 assessment undertaken</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Service_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service User</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 OR 2) AND ((3 AND 4) OR (5 AND 6) OR 7 OR 8)</booleanFilter>
            <errorMessage>For Day care &amp; support and Community support Services, Service User must be a living Person with Dementia. For other services Service User can also be a Carer of a Person with Dementia. Newsletter is available to all.</errorMessage>
            <filterItems>
                <field>Contact.Deceased_Date__c</field>
                <operation>greaterThan</operation>
                <valueField>$Source.Referral_Date__c</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.Deceased__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>$Source.Service_Type__c</field>
                <operation>equals</operation>
                <value>Community support service, Day care and support (establishment based), Registered home care and support</value>
            </filterItems>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Person with Dementia</value>
            </filterItems>
            <filterItems>
                <field>$Source.Service_Type__c</field>
                <operation>equals</operation>
                <value>Activity group, Dementia adviser, Dementia support, Dementia cafe, Information programme, Other (one to one), Peer support group, Singing for the Brain, Befriending, Advocacy</value>
            </filterItems>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Carer of Person with Dementia, Person with Dementia</value>
            </filterItems>
            <filterItems>
                <field>$Source.Service_Type__c</field>
                <operation>equals</operation>
                <value>Newsletter</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Outgoing Referral</value>
            </filterItems>
            <infoMessage>For Day care &amp; support and Community support Services, Service User must be a living Person with Dementia. For other services Service User can also be a Carer of a Person with Dementia. Newsletter is available to all.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Service Usage</relationshipLabel>
        <relationshipName>Service_Usage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Priority of service usage, only to be displayed on one-to-one services.</description>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Public_Alert_Message_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Only tick if everyone who is involved with this service user should contact you regarding the person.</inlineHelpText>
        <label>Public Alert Message Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_for_Referral__c</fullName>
        <description>Shows the Reason for Referral/Outline of service required from the referral form.</description>
        <inlineHelpText>Used to capture referral reason/outline of service requested from referral form</inlineHelpText>
        <label>Reason for Referral</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Referral_Acknowledged__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick when any required feedback has been set to the referrer.</inlineHelpText>
        <label>Feedback to Referrer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referral_Assessment_Date__c</fullName>
        <inlineHelpText>The date on which the appropriateness, eligibility and suitability of the referral were assessed and a decision was taken as to whether the service should be provided</inlineHelpText>
        <label>Date of Initial Assessment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referral_Date__c</fullName>
        <label>Referral Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referral_Outcome__c</fullName>
        <inlineHelpText>The outcome of the assessment of the referral – whether ‘Case Opened’ or ‘Service Required’. Specifies if person accepted onto the service or not (and any action taken)</inlineHelpText>
        <label>Referral Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Case Opened</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Eligible (Referred on)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Eligible (No further action)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Declined (Referred on)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Declined (No further action)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referral_Source__c</fullName>
        <inlineHelpText>The type of organisation or individual who made the referral. Used when reporting referral numbers. If Internal, complete ‘Referral Service’; if External, complete fields ‘Referral Organisation’ and ‘Referral Individual’ from that organisation</inlineHelpText>
        <label>Referral Source</label>
        <picklist>
            <picklistValues>
                <fullName>Internal Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carer (Non Professional)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Mental Health Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Psychiatric Nurse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dementia Specialist Nurse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Intervention with Dementia Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family/Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent Mental Capacity Advocate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Memory Clinic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Practice Nurse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Worker / Care Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voluntary Organisation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referral_Type__c</fullName>
        <label>Referral Type</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phonecall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signposting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referring_Individual__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Filter to Individuals in the Referring Organisation (if set).</description>
        <inlineHelpText>The name of the Professional that made the referral from the external organisation (if appropriate). Do NOT just type in name – A Professional already on the system attached to the referring organisation must be found</inlineHelpText>
        <label>Referring Individual</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>( NOT (2) AND 3) OR 1</booleanFilter>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Referring_Organisation__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.Referring_Organisation__c</field>
                <operation>notEqual</operation>
                <value>&quot;&quot;</value>
            </filterItems>
            <filterItems>
                <field>Contact.Active__c</field>
                <operation>equals</operation>
                <value>true</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Service Usage (Referring Individual)</relationshipLabel>
        <relationshipName>Service_Usage3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referring_Organisation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Filter to Internal Organisations if Referral source is Internal Referral otherwise filter to External Organsisations only.</description>
        <inlineHelpText>The name of the EXTERNAL organisation which made the referral (if appropriate). Do NOT just type in name of the organisation – An external Organisation already on the system must be found, selected and inserted by using the Look-Up function</inlineHelpText>
        <label>Referring Organisation</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
            <filterItems>
                <field>$Source.Referral_Source__c</field>
                <operation>equals</operation>
                <value>Internal Referral</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Internal Organisation</value>
            </filterItems>
            <filterItems>
                <field>$Source.Referral_Source__c</field>
                <operation>notEqual</operation>
                <value>Internal Referral</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>External organisation</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Usage (Referring Organisation)</relationshipLabel>
        <relationshipName>Service_Usage1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referring_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Filter to services opperated by referring organisation, otherwise only display internal services.</description>
        <inlineHelpText>Only to be used if an Internal (within the Society) referral is made to record from which internal service the referral came from. Do NOT just type in name of service – An internal service already on the system must be found, selected and inserted</inlineHelpText>
        <label>Referring Service</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>((1 OR 5) AND 4) OR (3 AND 2 AND 6)</booleanFilter>
            <filterItems>
                <field>Services__c.Operated_By__c</field>
                <operation>equals</operation>
                <valueField>$Source.Referring_Organisation__c</valueField>
            </filterItems>
            <filterItems>
                <field>Services__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Internal Service</value>
            </filterItems>
            <filterItems>
                <field>$Source.Referring_Organisation__c</field>
                <operation>equals</operation>
                <value>&quot;&quot;</value>
            </filterItems>
            <filterItems>
                <field>$Source.Referring_Organisation__c</field>
                <operation>notEqual</operation>
                <value>&quot;&quot;</value>
            </filterItems>
            <filterItems>
                <field>Services__c.Operated_By__c</field>
                <operation>equals</operation>
                <value>&quot;&quot;</value>
            </filterItems>
            <filterItems>
                <field>$User.Locality__c</field>
                <operation>equals</operation>
                <valueField>Services__c.Locality__r.Name</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Services__c</referenceTo>
        <relationshipLabel>Service Usage (Referring Service)</relationshipLabel>
        <relationshipName>Service_Usage1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Residence_Access_Details__c</fullName>
        <inlineHelpText>Gives details of how to gain access to the Service User’s property when visiting (e.g. key code, warden contact number, etc)</inlineHelpText>
        <label>Residence Access Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Identified__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether any significant risks have been identified and highlighted within an attached Risk Assessment document</inlineHelpText>
        <label>Risk Identified (see Risk Assessment)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Field__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The name of the Service/Activity.
Filtered by Service Type and user&apos;s Locality for internal Service Usage records.
No filter required for &apos;Outgoing Referrals&apos; as these are only ever created in the background (via Referrals screen).</description>
        <label>Service</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2 AND 5 AND 6) OR (3 AND 4)</booleanFilter>
            <filterItems>
                <field>Services__c.service_type__c</field>
                <operation>equals</operation>
                <valueField>$Source.Service_Type__c</valueField>
            </filterItems>
            <filterItems>
                <field>Services__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Internal Service</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Outgoing Referral</value>
            </filterItems>
            <filterItems>
                <field>Services__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>External Service</value>
            </filterItems>
            <filterItems>
                <field>Services__c.Locality__r.Name</field>
                <operation>equals</operation>
                <valueField>$User.Locality__c</valueField>
            </filterItems>
            <filterItems>
                <field>Services__c.service_status__c</field>
                <operation>equals</operation>
                <value>Open</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Services__c</referenceTo>
        <relationshipLabel>Service Usage</relationshipLabel>
        <relationshipName>Service_Usage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <description>The type of Service to which Service Usage relates.
Used as a filter when selecting Service.
Used to set Record Type on saving a new Service Usage.</description>
        <label>Service Type</label>
        <picklist>
            <picklistValues>
                <fullName>Activity group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advocacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Befriending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community support service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day care and support (establishment based)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dementia adviser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dementia cafe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dementia support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information programme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newsletter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (one to one)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peer support group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registered home care and support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singing for the Brain</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Usage_Notes__c</fullName>
        <inlineHelpText>Summary of service provision and latest status</inlineHelpText>
        <label>Service Usage Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Service_User_Aware_of_Referral__c</fullName>
        <inlineHelpText>Enter &apos;Yes&apos; if Service User is currently aware of the referral, &apos;No&apos; if not, or &apos;Not Stated&apos; if not sure</inlineHelpText>
        <label>Service User Aware of Referral?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Stated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_User_Deceased__c</fullName>
        <description>Shows whether the Person has been identified as deceased.</description>
        <formula>IF(Primary_Service_User__r.Deceased__c ,&quot;TRUE&quot;,&quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service User Deceased</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_User_Record_Type__c</fullName>
        <formula>Primary_Service_User__r.Record_Type_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service User Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Share_with_colleagues__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the Service Usage should be automatically shared with colleagues (via trigger).</description>
        <inlineHelpText>Indicates whether the Service Usage record should be shared with colleagues. All records are shared by default unless the checkbox is deselected by an SSM or above</inlineHelpText>
        <label>Share with colleagues?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_of_Paper_File__c</fullName>
        <inlineHelpText>Select ‘PRE-CRS ONLY’ if only now keeping paper files that existed before the CRS; but ‘ACTIVE’ if still having an active paper file as well as using CRS. For new Service users, leave as ‘NONE’ if keeping all records only on the CRS</inlineHelpText>
        <label>Type of Paper File</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-CRS Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Updated</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>